added smock images

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-fourth-repo</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div>
         <h2>My fourth website</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum enim necessitatibus illo impedit molestias qui, dolore aliquam, explicabo, voluptatum similique autem magni natus eum aperiam optio hic odit? Est.</p>
+    </div>
+    <div>
+        <h2>Smock Causes Cancer</h2>
+        <img  width="300px" src="Images/Black st.jpg" alt="">
+        <img width="160px" src="Images/download.jpg" alt="">
     </div>
 </body>
 </html>
